--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
           />
           <button id="addBtn">Add Task</button>
 
+          <aside>
+            <img id="svampbob" src="svampbob.png" alt="svampbob" />
+          </aside>
+
           <div id="toDoContainer"></div>
         </div>
       </section>
