--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <button id="addBtn">Add Task</button>
 
           <aside>
-            <img id="svampbob" src="svampbob.png" alt="svampbob" />
+            <img id="svampbob" src="images/svampbob.png" alt="svampbob" />
           </aside>
 
           <div id="toDoContainer"></div>
